--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,80 +1,87 @@
 .jumbotron-billboard .img {
-    margin-bottom: 0px;
-    opacity: 0.7;
-    color: #fff;
-    background: #000 url("https://houstonfoodfinder.com/wp-content/uploads/2022/08/countercommon_burger_and_beer.jpg") top center no-repeat;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
+  margin-bottom: 0px;
+  opacity: 0.7;
+  color: #fff;
+  background: #000
+    url("https://houstonfoodfinder.com/wp-content/uploads/2022/08/countercommon_burger_and_beer.jpg")
+    top center no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
 
-  .jumbotron h2 {
-    margin-top: 0;
-  }
+.jumbotron h2 {
+  margin-top: 0;
+}
 
+.jumbotron {
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.jumbotron .container {
+  position: relative;
+  z-index: 2;
+}
+
+@media screen and (max-width: 768px) {
   .jumbotron {
-    position: relative;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
+}
 
-  .jumbotron .container {
-    position: relative;
-    z-index: 2;
-  }
+.text-color {
+  color: white;
+}
 
-  @media screen and (max-width: 768px) {
-    .jumbotron {
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-  }
+.pt {
+  padding-top: 75px;
+}
 
-  .text-color {
-    color: white;
-  }
+.logo {
+  width: 150px;
+  height: 150px;
+}
 
-  .pt {
-    padding-top: 75px;
-  }
+.data {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #f5f5f5;
+}
 
-  .logo {
-    width: 150px;
-    height: 150px;
-  }
+a.action_link {
+  text-decoration: none;
+}
 
-  .data {
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #F5F5F5;
-  }
+.resimg {
+  float: left;
+  margin-right: 15px;
+}
 
-  a.action_link {
-    text-decoration: none;
-  }
+body {
+  background-image: url("https://image.ibb.co/fqkgMw/dust_scratches.png");
+}
 
-  .resimg {
-    float: left;
-    margin-right: 15px;
-  }
+.horizontal-center-row {
+  display: flex;
+  justify-content: center;
+}
 
-  body {
-    background-image: url("https://image.ibb.co/fqkgMw/dust_scratches.png");
-  }
+.rating {
+  float: right;
+  margin-right: 15px;
+}
 
-  .horizontal-center-row {
-    display: flex;
-    justify-content: center;
-  }
-
-  .rating {
-    float: right;
-    margin-right: 15px;
-  }
+#map_container {
+  height: 400px; /* The height is 400 pixels */
+  width: 100%; /* The width is the width of the web page */
+}
