--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,3 +85,9 @@ body {
   height: 400px; /* The height is 400 pixels */
   width: 100%; /* The width is the width of the web page */
 }
+
+
+
+.hidden{
+  display: none;
+}
