--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
   opacity: 0.7;
   color: #fff;
   background: #000
-    url("https://houstonfoodfinder.com/wp-content/uploads/2022/08/countercommon_burger_and_beer.jpg")
+    url("https://images6.alphacoders.com/908/908160.jpg")
     top center no-repeat;
   width: 100%;
   height: 100%;
@@ -82,12 +82,12 @@ body {
 }
 
 #map_container {
-  height: 400px; /* The height is 400 pixels */
+  height: 600px; /* The height is 400 pixels */
   width: 100%; /* The width is the width of the web page */
 }
 
 #restaurant_results {
-  height: 525px; /* The height is 400 pixels */
+  height: 700px; /* The height is 400 pixels */
   width: 100%;
   overflow: auto;
   margin-bottom: 10px;
@@ -112,4 +112,182 @@ body {
 .portrait {
   border-radius: 25rem;
   scale: 75%;
+}
+
+.grid {
+  display: grid;
+  width: 150em;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  align-items: start;
+}
+
+
+
+.grid-item {
+
+  background-color: #fff;
+
+  border-radius: 0.4rem;
+
+  overflow: hidden;
+
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+
+  cursor: pointer;
+
+  transition: 0.2s;
+
+}
+
+
+
+.grid-item:hover {
+
+  transform: translateY(-0.5%);
+
+  box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
+
+}
+
+
+
+
+
+
+.card-img {
+
+  display: block;
+
+  width: 100%;
+
+  height: 10rem;
+
+  object-fit: cover;
+
+}
+
+
+
+.card-content {
+
+  padding: 3rem;
+
+}
+
+
+
+.card-header {
+
+  font-size: 3rem;
+
+  font-weight: 500;
+
+  color: #0d0d0d;
+
+  margin-bottom: 1.5rem;
+
+} 
+
+
+
+.card-text {
+
+  font-size: 1.6rem;
+
+  letter-spacing: 0.1rem;
+
+  line-height: 1.7;
+
+  color: #3d3d3d;
+
+  margin-bottom: 2.5rem;
+
+}
+
+
+
+.card-btn {
+
+  left: 70px;
+
+  position: absolute;
+
+  bottom: 40px;
+
+  display: block;
+
+  width: 50%;
+
+  padding: .1rem;
+
+  font-size: 1rem;
+
+  text-align: center;
+
+  color: #1489e2;
+
+  background-color: #d8e0fd;
+
+  border: none;
+
+  border-radius: 1rem;
+
+  transition: 01s;
+
+  cursor: pointer;
+
+  letter-spacing: 0.1rem;
+
+  text-decoration: none;
+
+}
+
+
+
+.card-btn span {
+
+  margin-left: 1rem;
+
+  transition: 0.2s;
+
+}
+
+
+
+.card-btn:hover,
+
+.card-btn:active {
+
+  background-color: #c2cffc;
+
+}
+
+
+
+.card-btn:hover span,
+
+.card-btn:active span {
+
+  margin-left: 1.5rem;
+
+}
+
+.card-link {
+
+  bottom: 3px;
+  left: 120px;
+  position: absolute;
+
+  text-decoration:none;
+  background-color: #007fff;
+  color: white;
+  padding: 2px 10px;
+  font-family: sans-serif;
+  border-radius: 3px;
+  font-weight:bold;
+}
+
+.card-link:hover {
+  background-color: #007fff;
 }
